err/oak.err
Listing '.'...
Listing './bin'...
Compiling './bin/oak-admin.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Oak-0.1.8.1.egg-info'...
Listing './lib/python3.5/site-packages/oak'...
Listing './lib/python3.5/site-packages/oak/layouts'...
Listing './lib/python3.5/site-packages/oak/layouts/clean'...
Listing './lib/python3.5/site-packages/oak/layouts/clean/static'...
Listing './lib/python3.5/site-packages/oak/layouts/clean/static/css'...
Listing './lib/python3.5/site-packages/oak/layouts/default'...
Listing './lib/python3.5/site-packages/oak/layouts/default/static'...
Listing './lib/python3.5/site-packages/oak/layouts/default/static/css'...
Listing './lib/python3.5/site-packages/oak/layouts/default_blue'...
Listing './lib/python3.5/site-packages/oak/layouts/default_blue/static'...
Listing './lib/python3.5/site-packages/oak/layouts/default_blue/static/css'...
Listing './lib/python3.5/site-packages/oak/layouts/default_v2'...
Listing './lib/python3.5/site-packages/oak/layouts/default_v2/static'...
Listing './lib/python3.5/site-packages/oak/layouts/default_v2/static/css'...
Listing './lib/python3.5/site-packages/oak/models'...
Listing './lib/python3.5/site-packages/oak/processors'...
Listing './lib/python3.5/site-packages/oak/scripts'...
Listing './lib/python3.5/site-packages/oak/utils'...
Compiling './lib/python3.5/site-packages/oak/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/oak/utils/__init__.py", line 22
    except (IOError, os.error), why:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
